--- a/homebox-file/pom.xml
+++ b/homebox-file/pom.xml
@@ -8,10 +8,11 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.hapleow</groupId>
+
     <artifactId>homebox-file</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>homebox-file</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
