--- a/homebox-codge/src/main/resources/application.properties
+++ b/homebox-codge/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=9002
+spring.application.name=homebox-codge
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/homebox?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
 
+#mybatis
+mybatis.type-aliases-package=com.hapleow.homeboxcodge.dao
+mybatis.mapper-locations=classpath:mapper/*.xml
