--- a/homebox-codge/src/main/resources/application.properties
+++ b/homebox-codge/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=root
 #mybatis
 mybatis.type-aliases-package=com.hapleow.homeboxcodge.dao
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
