生成templates目录下所有模板的对应文件

--- a/homebox-codge/src/main/resources/application.properties
+++ b/homebox-codge/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=root
 mybatis.type-aliases-package=com.hapleow.homeboxcodge.dao
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+## code-generator
+codge.template.path=templates/
+codge.dest-path=D:\\IdeaProjects\\homebox\\homebox-codge\\src\\main\\resources\\static\\
