--- a/homebox-codge/src/main/resources/application.properties
+++ b/homebox-codge/src/main/resources/application.properties
@@ -12,4 +12,4 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 ## code-generator
 codge.template.path=templates/
-codge.dest-path=D:\\IdeaProjects\\homebox\\homebox-codge\\src\\main\\java\\com\\hapleow\\homeboxcodge\\
+codge.dest-path=C:\\workspace\\homebox\\homebox-codge\\src\\main\\java\\com\\hapleow\\homeboxcodge\\code\\
