--- a/homebox-codge/src/main/resources/application.properties
+++ b/homebox-codge/src/main/resources/application.properties
@@ -11,5 +11,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 ## code-generator
-codge.template.path=templates/
+codge.template-path=templates/
 codge.dest-path=C:\\workspace\\homebox\\homebox-codge\\src\\main\\java\\com\\hapleow\\homeboxcodge\\code\\
+codge.class-root-path=C:\\workspace\\homebox\\homebox-codge\\src\\main\\java\\
+codge.class-package=com.hapleow.homeboxcodge.code
